[gd_scene load_steps=11 format=3 uid="uid://b1tvwvc0e2gct"]

[ext_resource type="Script" uid="uid://dn1rb4sqks3pb" path="res://5/Scenes/Shop/shop.gd" id="1_ke02f"]
[ext_resource type="Texture2D" uid="uid://d1v1iu5ya1f62" path="res://5/assets/res/Resources/shopBack.png" id="1_trh5x"]
[ext_resource type="Texture2D" uid="uid://caw43gye8xp0j" path="res://5/assets/res/Resources/tableImage.png" id="2_13hpp"]
[ext_resource type="Texture2D" uid="uid://c627tep6vijh3" path="res://5/assets/res/Resources/shoper.png" id="3_y7555"]
[ext_resource type="Texture2D" uid="uid://da0k18brv1vqn" path="res://5/assets/res/Resources/tip.png" id="4_ceor3"]
[ext_resource type="LabelSettings" uid="uid://dy8yc872pkete" path="res://5/Resources/ui_32.tres" id="5_85b8h"]
[ext_resource type="Texture2D" uid="uid://7eqootpatwqm" path="res://5/assets/res/Resources/quitbtn.png" id="6_fi8t4"]

[sub_resource type="LabelSettings" id="LabelSettings_fi8t4"]
font_size = 96
font_color = Color(1, 1, 0.05490196, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ke02f"]
font_size = 20
font_color = Color(1, 1, 0.05490196, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bf1aq"]
font_size = 48
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Shop" type="Node2D"]
script = ExtResource("1_ke02f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-15, -38)
scale = Vector2(1.4839902, 1.1347306)
texture = ExtResource("1_trh5x")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1007.00006, 343)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_y7555")
region_enabled = true
region_rect = Rect2(-1, -1, 158, 169)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(598, 557)
scale = Vector2(1.4844157, 1.1810606)
texture = ExtResource("2_13hpp")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(553, 248.00002)
scale = Vector2(1.9425409, 1.5357143)
texture = ExtResource("4_ceor3")

[node name="Label" type="Label" parent="."]
offset_left = 223.0
offset_top = 203.0
offset_right = 895.0
offset_bottom = 296.0
text = "点击下面的物品即可购买，点击下一关继续游戏"
label_settings = ExtResource("5_85b8h")

[node name="Label2" type="Label" parent="."]
offset_left = 380.0
offset_top = 25.0
offset_right = 764.0
offset_bottom = 157.0
text = "黄金矿工"
label_settings = SubResource("LabelSettings_fi8t4")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 963.0
offset_top = 49.0
offset_right = 1032.0
offset_bottom = 114.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_fi8t4")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 12.0
offset_right = 64.0
offset_bottom = 40.0
text = "下一关"
label_settings = SubResource("LabelSettings_ke02f")

[node name="Marker2D1" type="Marker2D" parent="."]
position = Vector2(119, 302)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(295, 302)
scale = Vector2(2.5, 2.5)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(475, 302)
scale = Vector2(1.3, 1.3)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(666, 302)
scale = Vector2(1.5, 1.5)

[node name="Label3" type="Label" parent="."]
offset_left = 94.0
offset_top = 504.0
offset_right = 176.0
offset_bottom = 571.0
label_settings = SubResource("LabelSettings_bf1aq")

[node name="money" type="Label" parent="."]
offset_left = 22.0
offset_top = 43.0
offset_right = 182.0
offset_bottom = 88.0
text = "当前金币：111111"
label_settings = ExtResource("5_85b8h")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
